--- a/src/pages/Layout/index.scss
+++ b/src/pages/Layout/index.scss
@@ -9,10 +9,10 @@
 .logo {
   width: 200px;
   height: 60px;
-  background: url('~@/assets/logo.png') no-repeat center / 160px auto;
 }
 
 .layout-content {
+  background-color: #eef0f3;
   overflow-y: auto;
 }
 
