--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,6 +1,13 @@
 .home {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+  .top-content {
+
+  }
+
+  .list-content {
+    height: 300px;
+  }
+
+  .row-content {
+    margin-top: 12px;
+  }
 }
