--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
 
 .layout {
   display: flex;
-  padding: 0 24px 24px;
+  padding: 12px;
   flex-direction: column;
   height: 100%;
   background-color: #fff;
